# PASJANS_KLONDIKE_STUDIA

./: CMakeLists.txt  README.md
include/: funkcje.h
src/: PASJANS_PP.cpp  funkcje.cpp
tests/: test.cpp
